# multidimensional_dashboard

./: ClassDiagramVer1_0_0.mdj  ComponentDiagram.mdj  README.md  UCM.mdj  main.py  pyproject.toml
Exemplary_data/: League_of_legends_stats.csv
IMP/: controller.py  dashApp.py  resourceController.py
IMP/web/: main.html
SE_Project/: controller.py  main.py  model.py  requirements.txt  view.py
SE_ProjectOld/: controller.py  main.py  model.py  view.py
SE_ProjectOld/ControllerFolder/: dataCorrection.py  resourceController.py
SE_ProjectOld/ModelFolder/: data.py  graph.py
SE_ProjectOld/ViewFolder/: dashServer.py  gui.py  plot.py
SE_ProjectOld/web/: plot.html
UCM/: SE_Project_Report_1.0.2.docx  UCM.mdj
app/: controller.py  data.py  model.py
