[project]
name = "multidimensional-dashboard"
version = "0.1.0"
description = "Interactive dashboard for multidimensional data visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens==3.0.0",
    "blinker==1.9.0",
    "bottle==0.13.3",
    "bottle-websocket==0.2.9",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "colorlover==0.3.0",
    "comm==0.2.2",
    "cufflinks==0.17.3",
    "dash==3.0.4",
    "dash-bootstrap-components==2.0.2",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "decorator==5.2.1",
    "eel==0.18.1",
    "executing==2.2.0",
    "flask==3.0.3",
    "future==1.0.0",
    "gevent==25.4.2",
    "gevent-websocket==0.10.1",
    "greenlet==3.2.1",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyterlab-widgets==3.0.15",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "narwhals==1.38.0",
    "nest-asyncio==1.6.0",
    "numpy==2.2.5",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "plotly==6.0.1",
    "prompt-toolkit==3.0.51",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "retrying==1.3.4",
    "setuptools==80.3.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "werkzeug==3.0.6",
    "widgetsnbextension==4.0.14",
    "zipp==3.21.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]

[tool.uv]
package = false
